<resources>
    <string name="app_name" translatable="false">Proyecto</string>
    <string name="Bienvenido">Bienvenido</string>
    <string name="nombreUsu">Nombre de usuario</string>
    <string name="usuario">Usuario</string>
    <string name="contraseña">Contraseña</string>
    <string name="registrar">Registrarse</string>
    <string name="entrar">Entrar</string>
    <string name="tenerCuenta">Ya tengo una cuenta</string>
    <string name="Nombre">Nombre</string>
    <string name="Email" translatable="false">Email</string>
    <string name="DNI" translatable="false">DNI</string>
    <string name="Telefono">Teléfono</string>
    <string name="Fecha">Fecha de nac.</string>
    <string name="Apellidos">Apellidos</string>
    <string name="titulo">Bienvenido</string>
    <string name="Editar">Editar perfil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>